<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#333"
        android:text="@string/add_health_data_title"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/bloodPressureEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/blood_pressure_text"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/bloodOxygenEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/blood_oxygen"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/bloodPressureEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/heartBeatRateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/heart_beat_rate"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/bloodOxygenEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="#2196F3"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/heartBeatRateEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
