<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/patientclinicalbg" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/logout"
        android:background="@color/logout_button_background"
        android:padding="10dp"
        android:layout_margin="16dp"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#80000000"
        android:layout_margin="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hometitle"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/viewPatientListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patientlisttitle"
            android:backgroundTint="@color/blue"
            android:textColor="#FFF"
            android:layout_marginVertical="10dp" />

        <Button
            android:id="@+id/addPatientButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patientaddtitle"
            android:backgroundTint="@color/blue"
            android:textColor="#FFF"
            android:layout_marginVertical="10dp" />
    </LinearLayout>
</RelativeLayout>
